crates/tribute-front/src/ast_to_ir/snapshots/tribute_front__ast_to_ir__lower__tests__snapshot_binop_add.snap
---
source: crates/tribute-front/src/ast_to_ir/lower.rs
assertion_line: 3726
expression: "trunk_ir::printer::print_op(db, ir_module.as_operation())"
---
core.module @test {
  func.func @main() -> core.nil {
    %0 = arith.const {value = 10} : core.i32
    %1 = arith.const {value = 20} : core.i32
    %2 = arith.add %0, %1 : core.i32
    func.return %2
  }
}
