crates/tribute-front/src/ast_to_ir/snapshots/tribute_front__ast_to_ir__lower__tests__snapshot_enum_decl.snap
---
source: crates/tribute-front/src/ast_to_ir/lower.rs
expression: ir_module
---
Module(test) {
    operations: [
        tribute.enum_def,
    ],
}
