crates/tribute-front/src/ast_to_ir/snapshots/tribute_front__ast_to_ir__lower__tests__snapshot_let_binding.snap
---
source: crates/tribute-front/src/ast_to_ir/lower.rs
assertion_line: 1877
expression: ir_module
---
Module(test) {
    operations: [
        func @main() -> core.nil {
            body: [
                "arith.const",
                "arith.const",
                "arith.add",
                "func.return",
            ],
        },
    ],
}
