crates/tribute-front/src/ast_to_ir/snapshots/tribute_front__ast_to_ir__lower__tests__snapshot_mixed_module.snap
---
source: crates/tribute-front/src/ast_to_ir/lower.rs
assertion_line: 3869
expression: "trunk_ir::printer::print_op(db, ir_module.as_operation())"
---
core.module @test {
  func.func @__add(%a: core.i32, %b: core.i32) -> core.i32 {
    ^bb0(%a: core.i32, %b: core.i32):
      func.unreachable
  }
  func.func @main() -> core.nil {
    ^bb0:
      %0 = arith.const {value = 42} : core.i32
      func.return %0
  }
}
